# python-api

./: .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  codecov.yml  conftest.py  docker-compose.yml  gunicorn.conf.py  pyproject.toml  pytest.ini  tox.ini  wsgi.py
.github/workflows/: lint.yml  release.yml  test.yml
alembic/: env.py
alembic/versions/: c9708fc68023_create_users_table.py
python_api/: __init__.py  database.py  exceptions.py  flask_app.py  models.py  openapi.py  queries.py  repositories.py  routes.py  schemas.py
spec/: health_check.yml  liveness.yml  users.yml
tests/: factories.py  test_flask_app.py  test_integration.py  test_unit.py
