[tool.poetry]
name = "python-api"
version = "0.1.0"
description = ""
authors = ["sven9 <sven9@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.4"
Flask = "^1.1.2"
python-dotenv = "^0.17.0"
marshmallow = "^3.11.1"
flasgger = "^0.9.5"
apispec = "^4.4.0"
apispec-webframeworks = "^0.5.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.11.1"
commitizen = "^2.16.0"
bandit = "^1.7.0"
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.7.0"
mypy = "^0.812"
radon = "^4.5.0"
pytest = "^6.2.2"
pytest-mock = "^3.5.1"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml",

]

[tool.black]
line-length = 119
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119
